线性结构实现